unpackaged/main/default/objects/Annexe__c/Annexe__c.object-meta.xml
<CustomObject>
    <label>Annexe</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>N° Annexes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annexes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>