unpackaged/main/default/objects/Annexe__c/fields/Annee__c.field-meta.xml
<CustomField>
    <fullName>Annee__c</fullName>
    <label>Année</label>
    <type>Date</type>
</CustomField>