unpackaged/main/default/objects/Annexe__c/fields/Source_de_donnees__c.field-meta.xml
<CustomField>
    <fullName>Source_de_donnees__c</fullName>
    <label>Source de données</label>
    <type>TextArea</type>
</CustomField>