unpackaged/main/default/objects/Annexe__c/fields/Type_d_annexes__c.field-meta.xml
<CustomField>
    <fullName>Type_d_annexes__c</fullName>
    <label>Type d&#39;annexes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charte qualité</fullName>
            </value>
            <value>
                <fullName>Contrat de mise à disposition</fullName>
            </value>
            <value>
                <fullName>Contrat de partenariat</fullName>
            </value>
            <value>
                <fullName>Contrat logistique</fullName>
            </value>
            <value>
                <fullName>Contrat prescription connectée</fullName>
            </value>
            <value>
                <fullName>Convention d&#39;exercice</fullName>
            </value>
            <value>
                <fullName>Convention de preuve</fullName>
            </value>
            <value>
                <fullName>Convention de transport</fullName>
            </value>
            <value>
                <fullName>Convention hospitalière</fullName>
            </value>
            <value>
                <fullName>Mise à disposition</fullName>
            </value>
            <value>
                <fullName>Revue de contrat</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>